--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URI = http://localhost:4001
+# VITE_BACKEND_URI = http://localhost:4001
+VITE_BACKEND_URI = https://api.shaadibazaar.in
