--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "react": "^19.2.0",
+    "react-apexcharts": "^1.9.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
